# ArchiveQRMaker

./: .gitignore  MANIFEST.in  README.md  default.nix  flake.nix  pypng.nix  pyproject.toml  requirements.txt  setup.cfg  shell.nix
src/archive_qr/: __init__.py  archiver.py  args.py
