[metadata]
name = archive_qr
description = Archives a URL and generates a QR code for the archive.
keywords = nanopore, nanopores, peptide, peptides, protein, proteins, DNA
license_file = LICENSE

[options]
zip_safe = False

package_dir =
    = src
packages = find:

[options.packages.find]
where = src
        .
include_package_data=True


[options.package_data]
* = *.md
    *.toml
    *.txt
    *.gif
    *.json
    *.fast5
    *.txt.gz

[options.entry_points]
console_scripts =
    archive_qr = archive_qr:main

[pydocstyle]
convention = numpy
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
